--- a/index.html
+++ b/index.html
@@ -55,23 +55,28 @@
                 <img src="content/nft_1.png" alt="NFT 1">
                 <h3>Abstract Waves</h3>
                 <p>Floor Price: 0.02 ETH</p>
+                <button class="buy-button" id="buy-art-1">Buy</button>
             </div>
             <div class="card" data-category="gaming">
                 <img src="content/nft_5.png" alt="NFT 2">
                 <h3>Urban House</h3>
                 <p>Floor Price: 0.25 ETH</p>
+                <button class="buy-button" id="buy-gaming-2">Buy</button>
             </div>
             <div class="card" data-category="photography">
                 <img src="content/nft_3.png" alt="NFT 3">
                 <h3>Winter Serenity</h3>
                 <p>Floor Price: 0.4 ETH</p>
+                <button class="buy-button" id="buy-photography-3">Buy</button>
             </div>
             <div class="card" data-category="memberships">
                 <img src="content/nft_4.png" alt="NFT 4">
                 <h3>Digital Art</h3>
                 <p>Floor Price: 1.2 ETH</p>
+                <button class="buy-button" id="buy-memberships-4">Buy</button>
             </div>
         </div>
+
     </div>
 </section>
 
