--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
 <div class="bottom-panel">
     <div class="wallet-info">
-        <p class="wallet-address"><strong>Wallet:</strong> My Wallet</p>
-        <p class="wallet-balance"><strong>Balance:</strong> $1,000</p>
+        <p class="wallet-address"><strong>Wallet:</strong></p>
+        <p class="wallet-balance"><strong>Balance:</strong></p>
     </div>
     <button class="recharge-button">Recharge</button>
 </div>
@@ -123,6 +123,7 @@
     </div>
 </div>
 
+<script type="module" src="config_loader.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
