--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
     </div>
 </section>
 
-<section id="my-nfts" style="display: none;">
+<section class="my-nfts" id="my-nfts" style="display: none;">
     <h2>My NFTs</h2>
-    <p>Your personal collection of NFTs will be displayed here.</p>
+    <div class="purchased-nfts"></div>
 </section>
 
 <div class="bottom-panel">
     <div class="wallet-info">
-        <p class="wallet-address"><strong>Wallet:</strong></p>
-        <p class="wallet-balance"><strong>Balance:</strong></p>
+        <p class="wallet-address" id="wallet-address"><strong>Wallet:</strong></p>
+        <p class="wallet-balance" id="wallet-balance"><strong>Balance:</strong></p>
     </div>
     <button class="recharge-button">Recharge</button>
 </div>
