--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="logo">Open Ocean</div>
+        <div class="upper-side">
+            <div class="logo">Open Ocean</div>
+            <div class="my-nfts"><a href="#" onclick="showSection('my-nfts')"> <img src="content/user.png" alt="NFT 1"></a></div>
+        </div>
         <ul class="nav-links">
             <li><a href="#" onclick="showSection('hero')">Home</a></li>
             <li><a href="#" onclick="showSection('trending')">Trending</a></li>
             <li><a href="#" onclick="showSection('categories')">Categories</a></li>
-            <li><a href="#" onclick="showSection('my-nfts')">My NFTs</a></li>
         </ul>
     </nav>
 </header>
