--- a/index.html
+++ b/index.html
@@ -52,27 +52,16 @@
     </div>
 </section>
 
-<section id="categories" class="categories" style="display: none;">
+<section id="categories" class="categories" >
     <h2>Explore Categories</h2>
-    <div class="category-list">
-        <div class="category">
-            <button onclick="showSection('all')">All</button>
+    <div class="slider-category-list-container">
+        <div class="slider-control prev" aria-label="Previous"> <img src="content/arrow.png" alt="arrow"> </div>
+        <div class="slider-wrapper">
+            <div class="slider-category-list">
+                <!-- Динамически добавляемые элементы -->
+            </div>
         </div>
-        <div class="category">
-            <button onclick="showSection('art')">Art</button>
-        </div>
-        <div class="category">
-            <button onclick="showSection('gaming')">Gaming</button>
-        </div>
-        <div class="category">
-            <button onclick="showSection('memberships')">Memberships</button>
-        </div>
-        <div class="category">
-            <button onclick="showSection('music')">Music</button>
-        </div>
-        <div class="category">
-            <button onclick="showSection('photography')">Photography</button>
-        </div>
+        <div class="slider-control next" aria-label="Next"> <img src="content/arrow.png" alt="arrow"> </div>
     </div>
 </section>
 
