--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 </section>
 
-<section id="categories" class="categories" >
+<section id="categories" class="categories" style="display: none;">
     <h2>Explore Categories</h2>
     <div class="slider-category-list-container">
         <div class="slider-control prev" aria-label="Previous"> <img src="content/arrow.png" alt="arrow"> </div>
