--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 </div>
 
-<div class="nft-details-panel" id="nftDetailsPanel" style="display: none;">
+<div class="nft-details-panel" id="nftDetailsPanel">
     <div class="panel-content">
         <button class="close-panel" onclick="closeNFTDetails()">X</button>
         <h2 id="nft-title">NFT Title</h2>
@@ -102,3 +102,4 @@
 <script type="module" src="config_loader.js"></script>
 </body>
 </html>
+
