--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
 
 <div class="nft-details-panel" id="nftDetailsPanel">
     <div class="panel-content">
-        <button class="close-panel" onclick="closeNFTDetails()">X</button>
+        <button class="close-panel">X</button>
         <h2 id="nft-title">NFT Title</h2>
         <img id="nft-image" src="" alt="NFT Image">
         <p id="nft-description">Description of the NFT will appear here.</p>
         <p id="nft-price">Price: </p>
-        <button class="buy-button">Buy</button>
     </div>
 </div>
 
