--- a/index.html
+++ b/index.html
@@ -58,10 +58,17 @@
         <div class="slider-control prev" aria-label="Previous"> <img src="content/arrow.png" alt="arrow"> </div>
         <div class="slider-wrapper">
             <div class="slider-category-list">
-                <!-- Динамически добавляемые элементы -->
+                <!-- Place for slider elements -->
             </div>
         </div>
         <div class="slider-control next" aria-label="Next"> <img src="content/arrow.png" alt="arrow"> </div>
+    </div>
+    <div class="category-list-container">
+        <div id="category-list" class="category-list">
+            <!-- Place for elements in container-->
+        </div>
+
+        <button id="show-more-btn">Show More</button>
     </div>
 </section>
 
@@ -98,7 +105,7 @@
 </div>
 
 <script src="index.js"></script>
-<script type="module" src="config_loader.js"></script>
+<script src="config_loader.js"></script>
 </body>
 </html>
 
