--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <div id="countdown-popup" class="popup-overlay">
     <div class="countdown-popup-content">
         <h2>Confirmation Sent</h2>
-        <p>The MiniApp will close automatically. Please wait...</p>
+        <p>The MiniApp will close automatically.</p>
         <p id="countdown-timer">Closing in 5 seconds...</p>
     </div>
 </div>
