--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <section class="my-nfts" id="my-nfts" style="display: none;">
     <h2>My NFTs</h2>
     <div class="total-value-box">
-        <p id="total-value">Total Value: 00000 XML</p>
+        <p id="nft-total-value">Total Value: 00000 XML</p>
     </div>
 
     <div class="category-slider">
