--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </div>
 
 <div id="error-popup" class="error-popup-overlay">
-    <div class="errpr-popup-content">
+    <div class="error-popup-content">
         <h2 id="error-title">Warning</h2>
         <p id="error-message">Something went wrong. Please try again.</p>
         <button id="close-error-popup-button">Close</button>
