--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <p id="popup-description">Enter the amount you want to recharge:</p>
         <input type="number" id="amount-input" placeholder="Min 10 XML" />
         <div class="popup-buttons">
-            <button id="confirm-button">Confirm</button>
-            <button id="close-popup-button">Cancel</button>
+            <button id="confirm-button" class="confirm-button">Confirm</button>
+            <button id="close-popup-button" class="close-popup-button">Cancel</button>
         </div>
     </div>
 </div>
