--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
         </div>
         <button class="slider-control next">&gt;</button>
     </div>
-    <div class="purchased-nfts"></div>
+
+    <div class="explore-section" id="explore-section">
+        <h2>Explore NFTs</h2>
+        <div class="my-nft-cards" id="my-nft-cards">
+            <!-- Карточки будут добавляться сюда -->
+        </div>
+    </div>
 </section>
 
 <div class="bottom-panel">
