--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <section id="trending" class="trending" style="display: none;">
     <h2>Trending NFTs</h2>
-    <div class="slider-container">
-        <div class="slider" id="slider">
-            <div class="slider-track" id="sliderTrack">
+    <div class="trending-slider-container">
+        <div class="trending-slider" id="slider">
+            <div class="trending-slider-track" id="sliderTrack">
             </div>
         </div>
     </div>
@@ -81,13 +81,13 @@
     </div>
 
     <div class="category-slider">
-        <button class="slider-control-nft prev"> <img src="content/arrow.png" alt="arrow"> </button>
-        <div class="slider-wrapper">
-            <div class="slider-track" id="my-nft-slider-track">
+        <div class="slider-control-nft prev"> <img src="content/arrow.png" alt="arrow"> </div>
+        <div class="nft-slider-wrapper">
+            <div class="nft-slider-track" id="my-nft-slider-track">
                 <!-- Кнопки категорий добавятся сюда динамически -->
             </div>
         </div>
-        <button class="slider-control-nft next"> <img src="content/arrow.png" alt="arrow"> </button>
+        <div class="slider-control-nft next"> <img src="content/arrow.png" alt="arrow"> </div>
     </div>
 
     <div class="explore-section" id="explore-section">
