--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <button id="scrollToTop" class="scroll-to-top">↑</button>
 
 <div id="popup-overlay" class="popup-overlay">
-    <div class="popup-content">
+    <div class="popup-content" id="popup-content">
         <h2 id="popup-title">Recharge/Withdraw</h2>
 
         <div id="recharge-content" style="display: none;">
