--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
             <input type="text" id="wallet-input" class="input-field" placeholder="Recipient Wallet" />
             <input type="number" id="amount-input" class="input-field" placeholder="Amount" />
 
+            <p class="warning-withdraw">⚠️ Your wallet will be credited within 15 minutes..</p>
+
             <div class="popup-buttons">
                 <button id="confirm-button" class="confirm-button">Confirm</button>
                 <button id="close-popup-button" class="close-popup-button" onclick="closePopup()">Cancel</button>
