--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p id="nft-total-value">Total Value: 00000 XML</p>
     </div>
 
-    <div class="category-slider" id="category-slider" style="display: none;">
+    <div class="category-slider" id="category-slider" style="display: block;">
         <div class="slider-control-nft prev"> <img src="content/arrow.png" alt="arrow"> </div>
         <div class="nft-slider-wrapper">
             <div class="nft-slider-track" id="my-nft-slider-track">
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="my-nft-no-nfts">
+    <div class="my-nft-no-nfts" id="my-nft-no-nfts" style="display: none;">
         <p>You don't have any NFTs in this collection.</p>
         <button class="my-nft-cta" onclick="showSection('trending')">Explore NFTs</button>
     </div>
@@ -131,6 +131,9 @@
             <div class="nft-info-item">
                 <div class="nft-total-bought-icon-info">📊 </div><span id="nft-total-bought">0</span>
             </div>
+            <div class="nft-info-item">
+                <div class="nft-owned-count-icon-info">📥 </div><span id="nft-owned-count">0</span>
+            </div>
         </div>
 
         <div class="nft-description">
@@ -141,7 +144,6 @@
             <p><strong>💰 </strong> <span id="nft-price">37.22 XLM</span></p>
         </div>
 
-        <!-- Buttons for increasing/decreasing the count -->
         <div class="count-container">
             <button class="count-button" id="decrease-count">-</button>
             <span id="nft-count-display">1</span>
