--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="nft-price-row">
-            <p><strong>💰 </strong> <span id="nft-price">37.22 XLM</span></p>
+            <p><strong><img src="content/money-icon.png" alt="NFT Icon" style="width: 20px; height: 15px; position: relative; top: 20px;"> </strong> <span id="nft-price">37.22 NFT</span></p>
         </div>
 
         <div class="count-container">
