--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Open Ocean</title>
     <link href="style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stellar-sdk@10.5.1/lib/stellar-sdk.min.js"></script>
+
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -221,7 +223,7 @@
     </div>
 </div>
 
-<script src="config_loader.js"></script>
+<script type="module" src="config_loader.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
