--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="my-nfts-nav"><a href="#" onclick="showSection('my-nfts')"> <img src="content/user.png" alt="NFT 1"></a></div>
         </div>
         <ul class="nav-links">
-            <li><a href="#" onclick="setActiveSection(event, 'hero')">Home</a></li>
-            <li><a href="#" onclick="setActiveSection(event, 'trending')">Trending</a></li>
-            <li><a href="#" onclick="setActiveSection(event, 'categories')">Categories</a></li>
+            <li><a href="#" onclick="showSection('hero')">Home</a></li>
+            <li><a href="#" onclick="showSection('trending')">Trending</a></li>
+            <li><a href="#" onclick="showSection('categories')">Categories</a></li>
         </ul>
     </nav>
 </header>
